crates/swc_ecma_parser/tests/test262-error-references/fail/bfadeead1ddbd122.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/bfadeead1ddbd122.js:1:35
  |
1 | function hello() { 'use strict'; "\00"; }
  |                                   ^^

